Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-31912

[explaratory_2024_10] Preferences freezes when Emulator is running

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • Qt Creator 15.0.0-rc1
    • Qt Creator 13.0.2, Qt Creator 14.0.2, Qt Creator 15.0.0-beta2
    • Android Support
    • None
    • ubuntu 22.04
    • Linux/X11
    • e0bb7b839 (15.0)

      Hello,
      I have found a bug with preferences which occurs when the android emulator is working.

      Two ways to reproduce depending which preference settings were last opened.

      If you previously were on Kits option (so if you open preferences and got Kits selected):

      ...........video_1.webm attached............
      1. Open any project which will run on emulator (in my example x86 x64 cpp)
      2. Run the application (deploy to emulator)
      3. wait for emulator and app to load
      4. Go to Edit->Preferences
      5. Click tabs (Qt Versions/Compilers/Debuggers) and switch to any other option like Devices etc...
      6. Observe that Preferences freezes and you are unable to switch to any other option from the left column

      If you previously were on other option in preferences (Python in my example):
      ...........video_2.webm attached............
      1. Open any project which will run on emulator (in my example x86 x64 cpp)
      2. Run the application (deploy to emulator)
      3. wait for emulator and app to load
      4. Go to Edit->Preferences
      5. Click random settings/tabs until it freezes (on this video it look longer than usual to take a freeze)
      6. Observe that Preferences freezes and you are unable to switch to any other option from the left column

        1. logs_video_1
          20 kB
          Adam Kielkowski
        2. logs_video_2
          23 kB
          Adam Kielkowski
        3. video_2.webm
          14.26 MB
          Adam Kielkowski
        4. video_1.webm
          9.82 MB
          Adam Kielkowski
        For Gerrit Dashboard: QTCREATORBUG-31912
        # Subject Branch Project Status CR V

            jkobus Jarek Kobus
            ael Adam Kielkowski
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes