Android: Fix freeze when showing Devices settings category

It looks like executing blocking process from inside
AndroidDevice::createWidget(), which is executed from
show event, may interferre with GUI.

The fix is to execute the blocking process with a delay.

Fixes: QTCREATORBUG-31912
Change-Id: Id5a065364e0992c31e586547fc520f76a89f95cf
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>